docs/1.13/rabbitmq/v1beta1/shovel.md
---
permalink: /1.13/rabbitmq/v1beta1/shovel/
---

# rabbitmq.v1beta1.shovel

"Shovel is the Schema for the shovels API"

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withAckMode(ackMode)`](#fn-specwithackmode)
  * [`fn withAddForwardHeaders(addForwardHeaders)`](#fn-specwithaddforwardheaders)
  * [`fn withDeleteAfter(deleteAfter)`](#fn-specwithdeleteafter)
  * [`fn withDestAddForwardHeaders(destAddForwardHeaders)`](#fn-specwithdestaddforwardheaders)
  * [`fn withDestAddTimestampHeader(destAddTimestampHeader)`](#fn-specwithdestaddtimestampheader)
  * [`fn withDestAddress(destAddress)`](#fn-specwithdestaddress)
  * [`fn withDestApplicationProperties(destApplicationProperties)`](#fn-specwithdestapplicationproperties)
  * [`fn withDestApplicationPropertiesMixin(destApplicationProperties)`](#fn-specwithdestapplicationpropertiesmixin)
  * [`fn withDestExchange(destExchange)`](#fn-specwithdestexchange)
  * [`fn withDestExchangeKey(destExchangeKey)`](#fn-specwithdestexchangekey)
  * [`fn withDestMessageAnnotations(destMessageAnnotations)`](#fn-specwithdestmessageannotations)
  * [`fn withDestMessageAnnotationsMixin(destMessageAnnotations)`](#fn-specwithdestmessageannotationsmixin)
  * [`fn withDestProperties(destProperties)`](#fn-specwithdestproperties)
  * [`fn withDestPropertiesMixin(destProperties)`](#fn-specwithdestpropertiesmixin)
  * [`fn withDestProtocol(destProtocol)`](#fn-specwithdestprotocol)
  * [`fn withDestPublishProperties(destPublishProperties)`](#fn-specwithdestpublishproperties)
  * [`fn withDestPublishPropertiesMixin(destPublishProperties)`](#fn-specwithdestpublishpropertiesmixin)
  * [`fn withDestQueue(destQueue)`](#fn-specwithdestqueue)
  * [`fn withName(name)`](#fn-specwithname)
  * [`fn withPrefetchCount(prefetchCount)`](#fn-specwithprefetchcount)
  * [`fn withReconnectDelay(reconnectDelay)`](#fn-specwithreconnectdelay)
  * [`fn withSrcAddress(srcAddress)`](#fn-specwithsrcaddress)
  * [`fn withSrcConsumerArgs(srcConsumerArgs)`](#fn-specwithsrcconsumerargs)
  * [`fn withSrcConsumerArgsMixin(srcConsumerArgs)`](#fn-specwithsrcconsumerargsmixin)
  * [`fn withSrcDeleteAfter(srcDeleteAfter)`](#fn-specwithsrcdeleteafter)
  * [`fn withSrcExchange(srcExchange)`](#fn-specwithsrcexchange)
  * [`fn withSrcExchangeKey(srcExchangeKey)`](#fn-specwithsrcexchangekey)
  * [`fn withSrcPrefetchCount(srcPrefetchCount)`](#fn-specwithsrcprefetchcount)
  * [`fn withSrcProtocol(srcProtocol)`](#fn-specwithsrcprotocol)
  * [`fn withSrcQueue(srcQueue)`](#fn-specwithsrcqueue)
  * [`fn withVhost(vhost)`](#fn-specwithvhost)
  * [`obj spec.rabbitmqClusterReference`](#obj-specrabbitmqclusterreference)
    * [`fn withName(name)`](#fn-specrabbitmqclusterreferencewithname)
    * [`fn withNamespace(namespace)`](#fn-specrabbitmqclusterreferencewithnamespace)
    * [`obj spec.rabbitmqClusterReference.connectionSecret`](#obj-specrabbitmqclusterreferenceconnectionsecret)
      * [`fn withName(name)`](#fn-specrabbitmqclusterreferenceconnectionsecretwithname)
  * [`obj spec.uriSecret`](#obj-specurisecret)
    * [`fn withName(name)`](#fn-specurisecretwithname)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of Shovel

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"ShovelSpec defines the desired state of Shovel\nFor how to configure Shovel, see: https://www.rabbitmq.com/shovel.html."

### fn spec.withAckMode

```ts
withAckMode(ackMode)
```



### fn spec.withAddForwardHeaders

```ts
withAddForwardHeaders(addForwardHeaders)
```



### fn spec.withDeleteAfter

```ts
withDeleteAfter(deleteAfter)
```



### fn spec.withDestAddForwardHeaders

```ts
withDestAddForwardHeaders(destAddForwardHeaders)
```



### fn spec.withDestAddTimestampHeader

```ts
withDestAddTimestampHeader(destAddTimestampHeader)
```



### fn spec.withDestAddress

```ts
withDestAddress(destAddress)
```

"amqp10 configuration; required if destProtocol is amqp10"

### fn spec.withDestApplicationProperties

```ts
withDestApplicationProperties(destApplicationProperties)
```

"amqp10 configuration"

### fn spec.withDestApplicationPropertiesMixin

```ts
withDestApplicationPropertiesMixin(destApplicationProperties)
```

"amqp10 configuration"

**Note:** This function appends passed data to existing values

### fn spec.withDestExchange

```ts
withDestExchange(destExchange)
```

"amqp091 configuration"

### fn spec.withDestExchangeKey

```ts
withDestExchangeKey(destExchangeKey)
```

"amqp091 configuration"

### fn spec.withDestMessageAnnotations

```ts
withDestMessageAnnotations(destMessageAnnotations)
```

"amqp10 configuration"

### fn spec.withDestMessageAnnotationsMixin

```ts
withDestMessageAnnotationsMixin(destMessageAnnotations)
```

"amqp10 configuration"

**Note:** This function appends passed data to existing values

### fn spec.withDestProperties

```ts
withDestProperties(destProperties)
```

"amqp10 configuration"

### fn spec.withDestPropertiesMixin

```ts
withDestPropertiesMixin(destProperties)
```

"amqp10 configuration"

**Note:** This function appends passed data to existing values

### fn spec.withDestProtocol

```ts
withDestProtocol(destProtocol)
```



### fn spec.withDestPublishProperties

```ts
withDestPublishProperties(destPublishProperties)
```

"amqp091 configuration"

### fn spec.withDestPublishPropertiesMixin

```ts
withDestPublishPropertiesMixin(destPublishProperties)
```

"amqp091 configuration"

**Note:** This function appends passed data to existing values

### fn spec.withDestQueue

```ts
withDestQueue(destQueue)
```

"amqp091 configuration"

### fn spec.withName

```ts
withName(name)
```

"Required property; cannot be updated"

### fn spec.withPrefetchCount

```ts
withPrefetchCount(prefetchCount)
```



### fn spec.withReconnectDelay

```ts
withReconnectDelay(reconnectDelay)
```



### fn spec.withSrcAddress

```ts
withSrcAddress(srcAddress)
```

"amqp10 configuration; required if srcProtocol is amqp10"

### fn spec.withSrcConsumerArgs

```ts
withSrcConsumerArgs(srcConsumerArgs)
```

"amqp091 configuration"

### fn spec.withSrcConsumerArgsMixin

```ts
withSrcConsumerArgsMixin(srcConsumerArgs)
```

"amqp091 configuration"

**Note:** This function appends passed data to existing values

### fn spec.withSrcDeleteAfter

```ts
withSrcDeleteAfter(srcDeleteAfter)
```



### fn spec.withSrcExchange

```ts
withSrcExchange(srcExchange)
```

"amqp091 configuration"

### fn spec.withSrcExchangeKey

```ts
withSrcExchangeKey(srcExchangeKey)
```

"amqp091 configuration"

### fn spec.withSrcPrefetchCount

```ts
withSrcPrefetchCount(srcPrefetchCount)
```



### fn spec.withSrcProtocol

```ts
withSrcProtocol(srcProtocol)
```



### fn spec.withSrcQueue

```ts
withSrcQueue(srcQueue)
```

"amqp091 configuration"

### fn spec.withVhost

```ts
withVhost(vhost)
```

"Default to vhost '/'; cannot be updated"

## obj spec.rabbitmqClusterReference

"Reference to the RabbitmqCluster that this Shovel will be created in.\nRequired property."

### fn spec.rabbitmqClusterReference.withName

```ts
withName(name)
```

"The name of the RabbitMQ cluster to reference.\nHave to set either name or connectionSecret, but not both."

### fn spec.rabbitmqClusterReference.withNamespace

```ts
withNamespace(namespace)
```

"The namespace of the RabbitMQ cluster to reference.\nDefaults to the namespace of the requested resource if omitted."

## obj spec.rabbitmqClusterReference.connectionSecret

"Secret contains the http management uri for the RabbitMQ cluster.\nThe Secret must contain the key `uri`, `username` and `password` or operator will error.\nHave to set either name or connectionSecret, but not both."

### fn spec.rabbitmqClusterReference.connectionSecret.withName

```ts
withName(name)
```

"Name of the referent.\nMore info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names\nTODO: Add other useful fields. apiVersion, kind, uid?"

## obj spec.uriSecret

"Secret contains the AMQP URI(s) to configure Shovel destination and source.\nThe Secret must contain the key `destUri` and `srcUri` or operator will error.\nBoth fields should be one or multiple uris separated by ','.\nRequired property."

### fn spec.uriSecret.withName

```ts
withName(name)
```

"Name of the referent.\nMore info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names\nTODO: Add other useful fields. apiVersion, kind, uid?"